--- a/src/css/Homepage.css
+++ b/src/css/Homepage.css
@@ -1,13 +1,19 @@
+@import "Swiper.css";
+@import "About.css";
+@import "Service.css";
+@import "Team.css";
+
+
 
 @font-face {
 	font-family: "Book Antiqua";
-	src: url("./fonts/book-antiqua/book-antiqua.eot");
-	src: url("./fonts/book-antiqua/book-antiqua.eot?#iefix") format("embedded-opentype"), /* IE6-IE8 */
-		url("./fonts/book-antiqua/book-antiqua.otf") format("opentype"), /* Open Type Font */
-		url("./fonts/book-antiqua/book-antiqua.svg") format("svg"), /* Legacy iOS */
-		url("./fonts/book-antiqua/book-antiqua.ttf") format("truetype"), /* Safari, Android, iOS */
-		url("./fonts/book-antiqua/book-antiqua.woff") format("woff"), /* Modern Browsers */
-		url("./fonts/book-antiqua/book-antiqua.woff2") format("woff2"); /* Modern Browsers */
+	src: url("../fonts/book-antiqua/book-antiqua.eot");
+	src: url("../fonts/book-antiqua/book-antiqua.eot?#iefix") format("embedded-opentype"), /* IE6-IE8 */
+		url("../fonts/book-antiqua/book-antiqua.otf") format("opentype"), /* Open Type Font */
+		url("../fonts/book-antiqua/book-antiqua.svg") format("svg"), /* Legacy iOS */
+		url("../fonts/book-antiqua/book-antiqua.ttf") format("truetype"), /* Safari, Android, iOS */
+		url("../fonts/book-antiqua/book-antiqua.woff") format("woff"), /* Modern Browsers */
+		url("../fonts/book-antiqua/book-antiqua.woff2") format("woff2"); /* Modern Browsers */
 	font-weight: normal;
 	font-style: normal;
 }
@@ -16,6 +22,12 @@ body {
 	font-family: "Book Antiqua";
 	background-color: --color-footer-h4;
 }
+
+@media(min-width: 998px) {
+    body {
+      margin-top: 115px;
+    }
+  }
 
 :root {
     /* --color-bg: #212529; */
@@ -34,51 +46,6 @@ body {
     padding-left: 0;
     padding-right: 0;
 }
-
-.Service {
-    height: auto;
-    margin-bottom: 30px;
-}
-
-
-.Service .nav-tabs .nav-link.active {
-    color: #fafaff;
-    background-color: #b40051;
-    border-color: var(--bs-nav-tabs-link-active-border-color);
-}
-
-.Service .nav-link {
-    color: #000000;
-}
-
-.Service p{
-    font-size: 1.2rem;
-    border-bottom: 1.5px solid;  
-}
-
-.Service-Tab ul,li{
-    font-size: 1.2rem;
-}
-
-@media(max-width: 1000px) {
-    .Service p{
-        font-size: 1rem;
-    }
- 
-}
-
-@media(max-width: 550px) {
-    .Service p{
-        font-size: 0.8rem;
-    }
-}
-
-@media(max-width: 420px) {
-    .Service p{
-        font-size: 0.8rem;
-    }
-}
-
 
 
 .Header{
@@ -221,63 +188,7 @@ body {
 }
 
 
-.Team {
-    background-attachment: fixed;
-    background-image: url(https://brock.by/wp-content/uploads/2020/03/brock_01.jpg);
-    background-size: cover;
-    background-position: 50% 100%;
-    background-repeat: no-repeat;
-}
 
-.Team-Header{
-    margin-top: 20px;
-    margin-bottom: 20px;
-    font-size: 2.5rem;
-    font-weight: bold;
-    color:#ffffff;
-}
-
-.Team-container{
-    margin: 0 auto;
-    position: relative;
-    border: 4px solid #ffffff;
-    border-radius: 10px;
-    padding-left: 0;
-    padding-right: 0;
-    width: 80%;
-    background: white;
-}
-
-.Team-container img{
-    max-width: 60%;
-    border-radius: 50%;
-    height: 100%;
-    margin-top: 30px;
-}
-
-.Team-person{
-    position: relative;
-    bottom: 20%;
-    margin-bottom: 20px;
-}
-
-
-.Team-person h4{
-    color: black;
-    font-weight: 400;
-    font-size: 20px;
-    line-height: 1.4;
-}
-
-.Team-person a{
-    margin-top: 20px;
-    --bs-btn-padding-x: 1.75rem;
-    --bs-btn-padding-y: 0.675rem;
-}
-
-.Team-person a:hover{
-text-decoration: none;
-}
 
 
 
@@ -418,6 +329,10 @@ text-decoration: none;
     margin-bottom: 30px;
 }
 
+.Contacts-header{
+    font-size: 1vw;
+}
+
 .Contacts-Form {
     background: #f6f6f6;
     border-radius: 15px;
@@ -425,35 +340,22 @@ text-decoration: none;
     box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.2);   
 }
 
-.About {
-    height: 570px;
+
+@media (max-width: 1200px) {
+    .Contacts-header{
+        font-size: 1.8vw;
+    }
+
 }
 
-.About SVG{
-    height: 80px;
-    width: 175px;
-    margin-left: 15px;
-    margin-top: 20px;
+@media (max-width: 767px) {
+    .Contacts-header{
+        font-size: 1em;
+    }
+    
 }
 
-.About-content {
-    margin-top: 50px;
-}
 
-.About-container{
-    margin: 0 auto;
-    position: relative;
-    border: 4px solid #ffffff;
-    border-radius: 10px;
-    padding-left: 0;
-    padding-right: 0;
-    width: 80%;
-    background: white; 
-}
-
-.About-container img {
-    max-width: 200px;
-}
 
 
 .Login form {
@@ -478,3 +380,5 @@ text-decoration: none;
 .Admin .nav-link {
     color: #000000;
 }
+
+
