--- a/src/css/SwiperInstagram.css
+++ b/src/css/SwiperInstagram.css
@@ -21,11 +21,7 @@
     padding-right: 0;
 }
 
-.Swiper-Container img{
-    height: 400px;
-    max-width: 100%;
-    object-fit: cover;
-}
+
 
 .Swiper-Text p{
     text-indent: 20px;
@@ -68,6 +64,12 @@ height: 100%;
 object-fit: cover;
 }
 
+.swiper-slide-instagram img{
+    height: 370px;
+    max-width: 100%;
+    object-fit: cover;
+}
+
 .Swiper-svg-instagram{
     width: 40px !important;
     height: 40px !important;
@@ -82,6 +84,9 @@ object-fit: cover;
     .Swiper-svg-instagram{
         width: 20px !important;
         height: 20px !important; 
+    }
+    .swiper-slide-instagram img{
+        height: 100%;
     }
   }
   
